Fix: arrow links are not visible in some color combinations

--- a/src/css/utilities/arrow-link.css
+++ b/src/css/utilities/arrow-link.css
@@ -15,7 +15,7 @@
     gap: 0.5rem;
     font-family: var(--font-actions);
     font-weight: 700;
-    color: var(--color-button-text);
+    color: var(--color-page-links);
 
     &:hover,
     &:focus-visible {
